name:              renters-reality
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Patrick Brisbin
maintainer:        Patrick Brisbin
synopsis:          Source for renters reality dot com
description:       Source for renters reality dot com
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://rentersreality.com

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Feed
                     Handler.Landlords
                     Handler.Legal
                     Handler.Profile
                     Handler.Reviews
                     Handler.Root
                     Handler.Search
                     Helpers.Forms
                     Helpers.Search

    ghc-options:   -Wall -threaded -O0

executable         renters-reality
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2 -static
    else
        ghc-options:   -Wall -threaded -O0

    main-is:       main.hs

    build-depends: base                  >= 4     && < 5
                 , yesod                 >= 0.10  && < 0.11
                 , yesod-core            >= 0.10  && < 0.11
                 , yesod-auth            >= 0.8   && < 0.9
                 , yesod-static          >= 0.10  && < 0.11
                 , yesod-default         >= 0.6   && < 0.7
                 , yesod-form            >= 0.4   && < 0.5
                 , mime-mail             >= 0.4.1 && < 0.5
                 , clientsession         >= 0.7.3 && < 0.8
                 , bytestring            >= 0.9   && < 0.10
                 , text                  >= 0.11  && < 0.12
                 , persistent            >= 0.7   && < 0.8
                 , persistent-postgresql >= 0.7   && < 0.8
                 , template-haskell
                 , hamlet                >= 0.10   && < 0.11
                 , shakespeare-css       >= 0.10   && < 0.11
                 , shakespeare-js        >= 0.10   && < 0.11
                 , shakespeare-text      >= 0.10   && < 0.11
                 , hjsmin                >= 0.0.14 && < 0.1
                 , wai
                 , containers
                 , time
                 , yesod-newsfeed
                 , yesod-goodies
