name:              renters
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Patrick Brisbin
maintainer:        Patrick Brisbin
synopsis:          Source for renters reality dot com
description:       Source for renters reality dot com
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://rentersreality.com

Flag production
    description:   Build the production executable.
    default:       True

library
    buildable:       False
    exposed-modules: Controller
    hs-source-dirs:  ., config
    other-modules:   Renters
                     Model
                     Settings

executable         renters
    if flag(production)
        cpp-options: -DPRODUCTION
        ghc-options: -Wall -static -threaded -O2
    else
        ghc-options: -Wall -threaded

    main-is:        config/renters.hs
    hs-source-dirs: ., config

    build-depends: base                >= 4     && < 5
                 , containers          >= 0.4   && < 0.5
                 , yesod               >= 0.8   && < 0.9
                 , yesod-auth          >= 0.4   && < 0.5
                 , yesod-static        >= 0.1   && < 0.2
                 , yesod-form          >= 0.1   && < 0.2
                 , yesod-persistent    >= 0.1   && < 0.2
                 , yesod-newsfeed      >= 0.1   && < 0.2
                 , yesod-comments      >= 0.4   && < 0.5
                 , yesod-goodies       >= 0.0.4 && < 0.0.5
                 , wai                 >= 0.4   && < 0.5
                 , wai-extra           >= 0.4   && < 0.5
                 , wai-handler-fastcgi >= 0.4   && < 0.5
                 , directory
                 , bytestring
                 , text
                 , time
                 , persistent
                 , persistent-template
                 , persistent-postgresql >= 0.5 && < 0.6
                 , template-haskell
                 , hamlet
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
