name:              renters
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Patrick Brisbin
maintainer:        Patrick Brisbin
synopsis:          The synopsis.
description:       The description.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://rentersreality.com

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles

                     Handler.Completion
                     Handler.Feed
                     Handler.Landlord
                     Handler.Landlords
                     Handler.Legal
                     Handler.Profile
                     Handler.Recent
                     Handler.Review
                     Handler.Reviews
                     Handler.Root
                     Handler.Search
                     Handler.User
                     Helpers.Completion
                     Helpers.ErrorHandler
                     Helpers.Grade
                     Helpers.Model
                     Helpers.Profile
                     Helpers.Request
                     Helpers.Review
                     Helpers.Search
                     Helpers.Sphinx
                     Helpers.User

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                FlexibleInstances
                TypeSynonymInstances
                OverloadedStrings

executable         renters
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                FlexibleInstances
                TypeSynonymInstances
                OverloadedStrings

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-postgresql         >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5

                 , aeson
                 , blaze-html
                 , containers
                 , friendly-time
                 , gravatar
                 , shorten-strings
                 , sphinx
                 , time
                 , wai
                 , yesod-comments
                 , yesod-json
                 , yesod-markdown
                 , yesod-newsfeed
                 , yesod-paginator

source-repository head
  type:         git
  location:     git://github.com/pbrisbin/renters-reality.git
